k8s/gitblit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitblit
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitblit
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitblit
    spec:
      containers:
        - name: gitblit
          image: gitblit/gitblit:rpc
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - containerPort: 9418
            - containerPort: 29418
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 1000m
              memory: 500Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20    # 容器启动后多久开始探测
            timeoutSeconds: 2          # 表示容器必须在2s内做出相应反馈给probe，否则视为探测失败
            periodSeconds: 30          # 探测周期，每30s探测一次
            successThreshold: 1        # 连续探测1次成功表示成功
            failureThreshold: 10        # 连续探测3次失败表示失败
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20    # 容器启动后多久开始探测
            timeoutSeconds: 2          # 表示容器必须在2s内做出相应反馈给probe，否则视为探测失败
            periodSeconds: 30          # 探测周期，每30s探测一次
            successThreshold: 1        # 连续探测1次成功表示成功
            failureThreshold: 10        # 连续探测3次失败表示失败
          volumeMounts:
            - name: gitblit
              mountPath: /var/opt/gitblit
      volumes:
        - name: gitblit
          persistentVolumeClaim:
            claimName: gitblit
