k8s/gitblit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitblit
  namespace: backend
spec:
  selector:
    app: gitblit
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
      nodePort: 30443
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: git
      protocol: TCP
      port: 9418
      targetPort: 9418
      nodePort: 30418
    - name: ssh
      protocol: TCP
      port: 29418
      targetPort: 29418
      nodePort: 30419
  type: NodePort
