k8s/gitblit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitblit
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - git.xenoamess.com
      secretName: my-tls-secret
  rules:
    - host: git.xenoamess.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitblit
                port:
                  number: 8443
